--- a/package.json
+++ b/package.json
@@ -48,12 +48,15 @@
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.7",
     "exceljs": "^4.4.0",
+    "express-rate-limit": "^8.2.1",
     "firebase": "^12.0.0",
     "framer-motion": "11.11.17",
+    "helmet": "^8.1.0",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "idb": "^8.0.3",
