--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
+  "version": 2,
+  "name": "on-tour-app-production",
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm ci",
+  "env": {
+    "NODE_ENV": "production",
+    "VITE_APP_VERSION": "@vercel_git_commit_sha",
+    "VITE_BUILD_TIME": "@vercel_git_commit_date",
+    "VITE_ENVIRONMENT": "production"
+  },
   "headers": [
     {
       "source": "/sw.js",
